force-app/main/default/objects/HFS_Work_Item__c/HFS_Work_Item__c.object-meta.xml
<CustomObject>
    <description>Cross-functional unit of accountable work triggered by evidence.</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WRK-{000000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>