force-app/main/default/objects/HFS_Work_Item__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <label>Blocked Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>