force-app/main/default/objects/HFS_Work_Item__c/fields/Closure_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Closure_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closure Outcome</label>
    <referenceTo>HFS_Outcome__c</referenceTo>
    <relationshipLabel>Work Items by Closure Outcome</relationshipLabel>
    <relationshipName>HFS_Work_Item_Closure_Outcome</relationshipName>
    <type>Lookup</type>
</CustomField>