force-app/main/default/objects/HFS_Work_Item__c/fields/Closure_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Closure_Verification_Status__c</fullName>
    <label>Closure Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_REQUIRED</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>PENDING_EVIDENCE</fullName>
                <label>Pending Evidence</label>
            </value>
            <value>
                <fullName>VERIFIED</fullName>
                <label>Verified</label>
            </value>
            <value>
                <fullName>REOPENED</fullName>
                <label>Reopened</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>