force-app/main/default/objects/HFS_Work_Item__c/fields/Closure_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Closure_Verified_At__c</fullName>
    <label>Closure Verified At</label>
    <type>DateTime</type>
</CustomField>