force-app/main/default/objects/HFS_Work_Item__c/fields/Depends_On_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depends On Work Item</label>
    <referenceTo>HFS_Work_Item__c</referenceTo>
    <relationshipLabel>Work Items by Depends On Work Item</relationshipLabel>
    <relationshipName>HFS_Work_Item_Depends_On_Work_Item</relationshipName>
    <type>Lookup</type>
</CustomField>