force-app/main/default/objects/HFS_Work_Item__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <label>Due At</label>
    <type>DateTime</type>
</CustomField>