force-app/main/default/objects/HFS_Work_Item__c/fields/Escalation_Role__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Role__c</fullName>
    <label>Escalation Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>