force-app/main/default/objects/HFS_Work_Item__c/fields/Handoff_State__c.field-meta.xml
<CustomField>
    <fullName>Handoff_State__c</fullName>
    <label>Handoff State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_REQUIRED</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>READY</fullName>
                <label>Ready</label>
            </value>
            <value>
                <fullName>BLOCKED</fullName>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>REQUESTED</fullName>
                <label>Requested</label>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>RETURNED</fullName>
                <label>Returned</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>