force-app/main/default/objects/HFS_Work_Item__c/fields/Handoff_Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Target_Role__c</fullName>
    <label>Handoff Target Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>