force-app/main/default/objects/HFS_Work_Item__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>