force-app/main/default/objects/HFS_Work_Item__c/fields/Primary_Entity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Work Items by Primary Entity</relationshipLabel>
    <relationshipName>HFS_Work_Item_Primary_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>