force-app/main/default/objects/HFS_Work_Item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>