force-app/main/default/objects/HFS_Work_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>BLOCKED</fullName>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>AWAITING_APPROVAL</fullName>
                <label>Awaiting Approval</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>