force-app/main/default/objects/HFS_Work_Item__c/fields/Target_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Target_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Relationship</label>
    <referenceTo>HFS_Relationship__c</referenceTo>
    <relationshipLabel>Work Items by Target Relationship</relationshipLabel>
    <relationshipName>HFS_Work_Item_Target_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>