force-app/main/default/objects/HFS_Work_Item__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trigger Event</label>
    <referenceTo>HFS_Event__c</referenceTo>
    <relationshipLabel>Work Items by Trigger Event</relationshipLabel>
    <relationshipName>HFS_Work_Item_Trigger_Event</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>