force-app/main/default/objects/HFS_Work_Item__c/validationRules/Verified_Closure_Requires_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Verified_Closure_Requires_Outcome</fullName>
    <active>true</active>
    <description>Verified closure requires a closure timestamp and outcome.</description>
    <errorConditionFormula>AND(ISPICKVAL(Closure_Verification_Status__c, "VERIFIED"), OR(ISBLANK(Closure_Verified_At__c), ISBLANK(Closure_Outcome__c)))</errorConditionFormula>
    <errorMessage>Verified closure requires a closure timestamp and outcome.</errorMessage>
</ValidationRule>